fixed small bug which was causing horizontal overflow in brave (probably chromium as well)

--- a/docs/style.css
+++ b/docs/style.css
@@ -95,7 +95,7 @@ html {
 }
 
 .chart1 {
-    width: 100vw;
+    width: 100%;
     max-height: 99vh;
     max-width: 99vw;
 }
